<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.videdesk.mobile.adapthub.activity.MessagesActivity">

    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:title="@string/txt_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/menu_file"
        android:orderInCategory="200"
        android:title="@string/txt_new_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_chat"
        android:orderInCategory="300"
        android:title="@string/txt_new_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_forum"
        android:orderInCategory="400"
        android:title="@string/txt_new_forum"
        app:showAsAction="never" />

</menu>
