<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.videdesk.mobile.adapthub.activity.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="center"
                android:src="@drawable/img_assar"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="center"
                android:src="@drawable/img_legon"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/lbl_app_name"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/colorDark" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/lbl_app_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorTitle"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:id="@+id/lbl_app_ver"
            android:textSize="16sp"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            android:src="@drawable/img_logo_rd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_com_abr"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_dev"
            android:id="@+id/lbl_app_dev"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/colorTitle"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ryt"
            android:id="@+id/lbl_app_ryt"
            android:gravity="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
