<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.videdesk.mobile.adapthub.activity.StartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:foregroundGravity="center"
                        android:src="@drawable/img_assar"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:foregroundGravity="center"
                        android:src="@drawable/img_legon"
                        android:layout_weight="1"/>

                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:textColor="@color/colorDark" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title"
                    android:textSize="16sp"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    android:src="@drawable/img_logo_rd" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_com_abr"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/colorDark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_dev"
                    android:gravity="center" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/txt_get_in"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_tour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorDark"
                android:text="@string/txt_read_more"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <!--
            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/txt_register"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />
            -->
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
